Add an underline style to the 'Back to Top' buttons

--- a/index.html
+++ b/index.html
@@ -65,5 +65,5 @@ title: Index
 </div>
 
 <div class="only-mobile alert">
-  <a href="#">Back to Top &nbsp; <i class="fa fa-arrow-circle-up"></i></a>
+  <a href="#" class="underline">Back to Top &nbsp; <i class="fa fa-arrow-circle-up"></i></a>
 </div>
